--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <body>
     <h1> Olá, Mundo </h1></body>
     <h2> Hello World "</h2>
-    <h3>Olá Dev</h3>
+     <h3>Olá Dev</h3>
    
-    <input type="email" name="" id="">
-     <input type="password" name="" id="">
- 
+    <input type="email" placeholder="digite seu e-mail"><br><br>
+    <label for="date">seu nascimento</label>
+    <input type="date" id="date"><br><br>
+    <input type="password" placeholder="Digite sua senha "><br> <br>
     <input type="button" value="Fazer Login">
 
 
