--- a/index.html
+++ b/index.html
@@ -1,23 +1,56 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>primeiro site em repositorio</title>
 </head>
+
 <body>
-    <h1> Olá, Mundo </h1></body>
-    <h2> Hello World "</h2>
-     <h3>Olá Dev</h3>
-   
-    <input type="email" placeholder="digite seu e-mail"><br><br>
-    <label for="date">seu nascimento</label>
-    <input type="date" id="date"><br><br>
-    <input type="password" placeholder="Digite sua senha "><br> <br>
-    <input type="button" value="Fazer Login">
+    <h1> Olá, Mundo </h1>
+</body>
+<h2> Hello World "</h2>
+<h3>Olá Dev</h3>
+<form action="">
+    
+</form>
+
+<input type="email" placeholder="digite seu e-mail"><br><br>
+
+<label for="date">seu nascimento</label>
+
+<input type="date" id="date"><br><br>
+
+<input type="tel"placeholder="Digite seu telefone"><br><br>
+
+<input type="password" placeholder="Digite sua senha "><br> <br>
+
+<label for="">Qual a sua Linguagem favorita?</label><br>
+
+<input type="radio" name="myname" id="vermelho" ><label 
+for="vermelho">JAVA</label>
+
+<input type="radio" name="myname" id="py"><label for="py">PYTHON</label>
+
+<input type="radio" name="myname" id="C++" ><label for="C++">C++</label>><br><br>
+
+<label for="">Qual seu PC favorito?</label><BR>
+    <select name="" id="">
+        <option >DELL</option>
+        <option >SAMSUNG</option>
+        <option >MACBOOK</option>
+    </select><BR></BR>
+
+    <input type="checkbox" name="" id="cbterms"><label for="cbterms">Aceito os Termos </label>
+    ><br><br>
+
+<input type="button" value="Fazer Login">
 
 
-    <hr>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus soluta iure enim error, velit ex accusamus dolores voluptatum architecto. Distinctio dignissimos soluta quidem accusamus saepe voluptatem nesciunt fuga a cumque!</p>
+<hr>
+<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus soluta iure enim error, velit ex accusamus dolores
+    voluptatum architecto. Distinctio dignissimos soluta quidem accusamus saepe voluptatem nesciunt fuga a cumque!</p>
+
 </html>
